examples/eks-managed-node-group/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-eks
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: durocolor.com.co
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: durocolor-prod-service
              port:
                number: 80
    - host: latest.durocolor.com.co
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prestashop-durocolor-service
              port:
                number: 80
    - host: php.durocolor.com.co
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: php-prestashop-durocolor
              port:
                number: 80
